[package]
name = "numHardLock"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "s"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
]